fix margin for the text to be more visible

--- a/assets/stylesheets/tailwind.css
+++ b/assets/stylesheets/tailwind.css
@@ -909,6 +909,14 @@ video {
     margin-top: 3rem;
   }
 
+  .md\:mt-14 {
+    margin-top: 3.5rem;
+  }
+
+  .md\:mt-16 {
+    margin-top: 4rem;
+  }
+
   .md\:w-1\/4 {
     width: 25%;
   }
@@ -958,6 +966,10 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:mt-12 {
+    margin-top: 3rem;
+  }
+
   .lg\:basis-1\/2 {
     flex-basis: 50%;
   }
@@ -985,6 +997,10 @@ video {
   .xl\:mx-auto {
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .xl\:mt-12 {
+    margin-top: 3rem;
   }
 
   .xl\:w-96 {
